kubernetes/overlays/apps/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-http
  labels:
    app.kubernetes.io/name: gitea
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app.kubernetes.io/name: gitea
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  labels:
    app.kubernetes.io/name: gitea
spec:
  type: NodePort
  ports:
  - name: ssh
    port: 30022
    targetPort: 22
    protocol: TCP
  selector:
    app.kubernetes.io/name: gitea
