kubernetes/overlays/apps/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitea
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt"
spec:
  tls:
  - hosts:
      - git.inahga.org
    secretName: inahga-org-tls
  rules:
  - host: git.inahga.org
    http:
      paths:
      - path: /
        backend:
          serviceName: gitea-http
          servicePort: 3000
